grammar/abc_parser.go
// Code generated from Abc.g4 by ANTLR 4.10.1. DO NOT EDIT.

package grammar // Abc
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AbcParser struct {
	*antlr.BaseParser
}

var abcParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func abcParserInit() {
	staticData := &abcParserStaticData
	staticData.literalNames = []string{
		"", "", "", "'/'", "'\\'", "'\\n'", "' '", "'|'", "'{'", "'}'", "'('",
		"')'", "':'", "'<'", "'>'", "'^'", "'='", "'_'", "','", "'H'", "'!roll!'",
		"'-'",
	}
	staticData.symbolicNames = []string{
		"", "PITCH", "NUMBER", "DIVIDER", "CONT", "NL", "WS", "SEP", "GS", "GE",
		"PS", "PE", "COLON", "LT", "GT", "SHARP", "NATURAL", "FLAT", "DOWN",
		"H", "ROLL", "TIE",
	}
	staticData.ruleNames = []string{
		"line", "unit", "note", "de", "triplet",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AbcParserInit initializes any static state used to implement AbcParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAbcParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AbcParserInit() {
	staticData := &abcParserStaticData
	staticData.once.Do(abcParserInit)
}

// NewAbcParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAbcParser(input antlr.TokenStream) *AbcParser {
	AbcParserInit()
	this := new(AbcParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &abcParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Abc.g4"

	return this
}

// AbcParser tokens.
const (
	AbcParserEOF     = antlr.TokenEOF
	AbcParserPITCH   = 1
	AbcParserNUMBER  = 2
	AbcParserDIVIDER = 3
	AbcParserCONT    = 4
	AbcParserNL      = 5
	AbcParserWS      = 6
	AbcParserSEP     = 7
	AbcParserGS      = 8
	AbcParserGE      = 9
	AbcParserPS      = 10
	AbcParserPE      = 11
	AbcParserCOLON   = 12
	AbcParserLT      = 13
	AbcParserGT      = 14
	AbcParserSHARP   = 15
	AbcParserNATURAL = 16
	AbcParserFLAT    = 17
	AbcParserDOWN    = 18
	AbcParserH       = 19
	AbcParserROLL    = 20
	AbcParserTIE     = 21
)

// AbcParser rules.
const (
	AbcParserRULE_line    = 0
	AbcParserRULE_unit    = 1
	AbcParserRULE_note    = 2
	AbcParserRULE_de      = 3
	AbcParserRULE_triplet = 4
)

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	var p = new(LineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbcParserRULE_line
	return p
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	var p = new(LineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbcParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) AllUnit() []IUnitContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IUnitContext); ok {
			len++
		}
	}

	tst := make([]IUnitContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IUnitContext); ok {
			tst[i] = t.(IUnitContext)
			i++
		}
	}

	return tst
}

func (s *LineContext) Unit(i int) IUnitContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnitContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnitContext)
}

func (s *LineContext) CONT() antlr.TerminalNode {
	return s.GetToken(AbcParserCONT, 0)
}

func (s *LineContext) WS() antlr.TerminalNode {
	return s.GetToken(AbcParserWS, 0)
}

func (s *LineContext) NL() antlr.TerminalNode {
	return s.GetToken(AbcParserNL, 0)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.EnterLine(s)
	}
}

func (s *LineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.ExitLine(s)
	}
}

func (p *AbcParser) Line() (localctx ILineContext) {
	this := p
	_ = this

	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AbcParserRULE_line)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(11)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<AbcParserPITCH)|(1<<AbcParserSEP)|(1<<AbcParserGS)|(1<<AbcParserPS)|(1<<AbcParserSHARP)|(1<<AbcParserNATURAL)|(1<<AbcParserFLAT)|(1<<AbcParserH)|(1<<AbcParserROLL))) != 0) {
		{
			p.SetState(10)
			p.Unit()
		}

		p.SetState(13)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(16)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AbcParserCONT {
		{
			p.SetState(15)
			p.Match(AbcParserCONT)
		}

	}
	p.SetState(19)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AbcParserWS {
		{
			p.SetState(18)
			p.Match(AbcParserWS)
		}

	}
	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AbcParserNL {
		{
			p.SetState(21)
			p.Match(AbcParserNL)
		}

	}

	return localctx
}

// IUnitContext is an interface to support dynamic dispatch.
type IUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnitContext differentiates from other interfaces.
	IsUnitContext()
}

type UnitContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnitContext() *UnitContext {
	var p = new(UnitContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbcParserRULE_unit
	return p
}

func (*UnitContext) IsUnitContext() {}

func NewUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnitContext {
	var p = new(UnitContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbcParserRULE_unit

	return p
}

func (s *UnitContext) GetParser() antlr.Parser { return s.parser }

func (s *UnitContext) AllDe() []IDeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeContext); ok {
			len++
		}
	}

	tst := make([]IDeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeContext); ok {
			tst[i] = t.(IDeContext)
			i++
		}
	}

	return tst
}

func (s *UnitContext) De(i int) IDeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeContext)
}

func (s *UnitContext) AllSEP() []antlr.TerminalNode {
	return s.GetTokens(AbcParserSEP)
}

func (s *UnitContext) SEP(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserSEP, i)
}

func (s *UnitContext) AllH() []antlr.TerminalNode {
	return s.GetTokens(AbcParserH)
}

func (s *UnitContext) H(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserH, i)
}

func (s *UnitContext) AllWS() []antlr.TerminalNode {
	return s.GetTokens(AbcParserWS)
}

func (s *UnitContext) WS(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserWS, i)
}

func (s *UnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.EnterUnit(s)
	}
}

func (s *UnitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.ExitUnit(s)
	}
}

func (p *AbcParser) Unit() (localctx IUnitContext) {
	this := p
	_ = this

	localctx = NewUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AbcParserRULE_unit)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(34)
	p.GetErrorHandler().Sync(p)
	_alt = 1
	for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1:
			p.SetState(25)
			p.GetErrorHandler().Sync(p)

			if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) == 1 {
				{
					p.SetState(24)
					p.Match(AbcParserH)
				}

			}
			p.SetState(29)
			p.GetErrorHandler().Sync(p)

			switch p.GetTokenStream().LA(1) {
			case AbcParserPITCH, AbcParserGS, AbcParserPS, AbcParserSHARP, AbcParserNATURAL, AbcParserFLAT, AbcParserH, AbcParserROLL:
				{
					p.SetState(27)
					p.de(0)
				}

			case AbcParserSEP:
				{
					p.SetState(28)
					p.Match(AbcParserSEP)
				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}
			p.SetState(32)
			p.GetErrorHandler().Sync(p)

			if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) == 1 {
				{
					p.SetState(31)
					p.Match(AbcParserWS)
				}

			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(36)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext())
	}

	return localctx
}

// INoteContext is an interface to support dynamic dispatch.
type INoteContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNoteContext differentiates from other interfaces.
	IsNoteContext()
}

type NoteContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNoteContext() *NoteContext {
	var p = new(NoteContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbcParserRULE_note
	return p
}

func (*NoteContext) IsNoteContext() {}

func NewNoteContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NoteContext {
	var p = new(NoteContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbcParserRULE_note

	return p
}

func (s *NoteContext) GetParser() antlr.Parser { return s.parser }

func (s *NoteContext) PITCH() antlr.TerminalNode {
	return s.GetToken(AbcParserPITCH, 0)
}

func (s *NoteContext) ROLL() antlr.TerminalNode {
	return s.GetToken(AbcParserROLL, 0)
}

func (s *NoteContext) DOWN() antlr.TerminalNode {
	return s.GetToken(AbcParserDOWN, 0)
}

func (s *NoteContext) AllNUMBER() []antlr.TerminalNode {
	return s.GetTokens(AbcParserNUMBER)
}

func (s *NoteContext) NUMBER(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserNUMBER, i)
}

func (s *NoteContext) AllDIVIDER() []antlr.TerminalNode {
	return s.GetTokens(AbcParserDIVIDER)
}

func (s *NoteContext) DIVIDER(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserDIVIDER, i)
}

func (s *NoteContext) SHARP() antlr.TerminalNode {
	return s.GetToken(AbcParserSHARP, 0)
}

func (s *NoteContext) NATURAL() antlr.TerminalNode {
	return s.GetToken(AbcParserNATURAL, 0)
}

func (s *NoteContext) FLAT() antlr.TerminalNode {
	return s.GetToken(AbcParserFLAT, 0)
}

func (s *NoteContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NoteContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NoteContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.EnterNote(s)
	}
}

func (s *NoteContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.ExitNote(s)
	}
}

func (p *AbcParser) Note() (localctx INoteContext) {
	this := p
	_ = this

	localctx = NewNoteContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AbcParserRULE_note)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AbcParserROLL {
		{
			p.SetState(38)
			p.Match(AbcParserROLL)
		}

	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<AbcParserSHARP)|(1<<AbcParserNATURAL)|(1<<AbcParserFLAT))) != 0 {
		{
			p.SetState(41)
			_la = p.GetTokenStream().LA(1)

			if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<AbcParserSHARP)|(1<<AbcParserNATURAL)|(1<<AbcParserFLAT))) != 0) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	}
	{
		p.SetState(44)
		p.Match(AbcParserPITCH)
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 10, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(45)
			p.Match(AbcParserDOWN)
		}

	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 11, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(48)
			p.Match(AbcParserNUMBER)
		}

	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 12, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(51)
				p.Match(AbcParserDIVIDER)
			}

		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 12, p.GetParserRuleContext())
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 13, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(57)
			p.Match(AbcParserNUMBER)
		}

	}

	return localctx
}

// IDeContext is an interface to support dynamic dispatch.
type IDeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeContext differentiates from other interfaces.
	IsDeContext()
}

type DeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeContext() *DeContext {
	var p = new(DeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbcParserRULE_de
	return p
}

func (*DeContext) IsDeContext() {}

func NewDeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeContext {
	var p = new(DeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbcParserRULE_de

	return p
}

func (s *DeContext) GetParser() antlr.Parser { return s.parser }

func (s *DeContext) Triplet() ITripletContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITripletContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITripletContext)
}

func (s *DeContext) AllDe() []IDeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeContext); ok {
			len++
		}
	}

	tst := make([]IDeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeContext); ok {
			tst[i] = t.(IDeContext)
			i++
		}
	}

	return tst
}

func (s *DeContext) De(i int) IDeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeContext)
}

func (s *DeContext) WS() antlr.TerminalNode {
	return s.GetToken(AbcParserWS, 0)
}

func (s *DeContext) GS() antlr.TerminalNode {
	return s.GetToken(AbcParserGS, 0)
}

func (s *DeContext) GE() antlr.TerminalNode {
	return s.GetToken(AbcParserGE, 0)
}

func (s *DeContext) DIVIDER() antlr.TerminalNode {
	return s.GetToken(AbcParserDIVIDER, 0)
}

func (s *DeContext) AllNote() []INoteContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INoteContext); ok {
			len++
		}
	}

	tst := make([]INoteContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INoteContext); ok {
			tst[i] = t.(INoteContext)
			i++
		}
	}

	return tst
}

func (s *DeContext) Note(i int) INoteContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INoteContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INoteContext)
}

func (s *DeContext) PS() antlr.TerminalNode {
	return s.GetToken(AbcParserPS, 0)
}

func (s *DeContext) PE() antlr.TerminalNode {
	return s.GetToken(AbcParserPE, 0)
}

func (s *DeContext) H() antlr.TerminalNode {
	return s.GetToken(AbcParserH, 0)
}

func (s *DeContext) TIE() antlr.TerminalNode {
	return s.GetToken(AbcParserTIE, 0)
}

func (s *DeContext) LT() antlr.TerminalNode {
	return s.GetToken(AbcParserLT, 0)
}

func (s *DeContext) GT() antlr.TerminalNode {
	return s.GetToken(AbcParserGT, 0)
}

func (s *DeContext) SEP() antlr.TerminalNode {
	return s.GetToken(AbcParserSEP, 0)
}

func (s *DeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.EnterDe(s)
	}
}

func (s *DeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AbcListener); ok {
		listenerT.ExitDe(s)
	}
}

func (p *AbcParser) De() (localctx IDeContext) {
	return p.de(0)
}

func (p *AbcParser) de(_p int) (localctx IDeContext) {
	this := p
	_ = this

	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewDeContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IDeContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 6
	p.EnterRecursionRule(localctx, 6, AbcParserRULE_de, _p)
	var _la int

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(98)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 20, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(61)
			p.Triplet()
		}
		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == AbcParserWS {
			{
				p.SetState(62)
				p.Match(AbcParserWS)
			}

		}
		{
			p.SetState(65)
			p.de(9)
		}

	case 2:
		{
			p.SetState(67)
			p.Match(AbcParserGS)
		}
		p.SetState(69)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == AbcParserDIVIDER {
			{
				p.SetState(68)
				p.Match(AbcParserDIVIDER)
			}

		}
		p.SetState(72)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<AbcParserPITCH)|(1<<AbcParserSHARP)|(1<<AbcParserNATURAL)|(1<<AbcParserFLAT)|(1<<AbcParserROLL))) != 0) {
			{
				p.SetState(71)
				p.Note()
			}

			p.SetState(74)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(76)
			p.Match(AbcParserGE)
		}

	case 3:
		{
			p.SetState(78)
			p.Match(AbcParserPS)
		}
		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<AbcParserPITCH)|(1<<AbcParserGS)|(1<<AbcParserPS)|(1<<AbcParserSHARP)|(1<<AbcParserNATURAL)|(1<<AbcParserFLAT)|(1<<AbcParserH)|(1<<AbcParserROLL))) != 0) {
			{
				p.SetState(79)
				p.de(0)
			}

			p.SetState(82)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(84)
			p.Match(AbcParserPE)
		}

	case 4:
		{
			p.SetState(86)
			p.Note()
		}
		p.SetState(88)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 18, p.GetParserRuleContext()) == 1 {
			{
				p.SetState(87)
				p.Match(AbcParserWS)
			}

		}

	case 5:
		{
			p.SetState(90)
			p.Match(AbcParserH)
		}
		p.SetState(92)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == AbcParserWS {
			{
				p.SetState(91)
				p.Match(AbcParserWS)
			}

		}
		{
			p.SetState(94)
			p.de(2)
		}

	case 6:
		{
			p.SetState(95)
			p.Note()
		}
		{
			p.SetState(96)
			p.Match(AbcParserTIE)
		}

	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(114)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 23, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(112)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 22, p.GetParserRuleContext()) {
			case 1:
				localctx = NewDeContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, AbcParserRULE_de)
				p.SetState(100)

				if !(p.Precpred(p.GetParserRuleContext(), 7)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 7)", ""))
				}
				{
					p.SetState(101)
					p.Match(AbcParserLT)
				}
				{
					p.SetState(102)
					p.de(8)
				}

			case 2:
				localctx = NewDeContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, AbcParserRULE_de)
				p.SetState(103)

				if !(p.Precpred(p.GetParserRuleContext(), 6)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 6)", ""))
				}
				{
					p.SetState(104)
					p.Match(AbcParserGT)
				}
				{
					p.SetState(105)
					p.de(7)
				}

			case 3:
				localctx = NewDeContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, AbcParserRULE_de)
				p.SetState(106)

				if !(p.Precpred(p.GetParserRuleContext(), 5)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 5)", ""))
				}
				p.SetState(109)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)

				if _la == AbcParserH {
					{
						p.SetState(107)
						p.Match(AbcParserH)
					}
					{
						p.SetState(108)
						p.Match(AbcParserWS)
					}

				}
				{
					p.SetState(111)
					p.Match(AbcParserSEP)
				}

			}

		}
		p.SetState(116)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 23, p.GetParserRuleContext())
	}

	return localctx
}

// ITripletContext is an interface to support dynamic dispatch.
type ITripletContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTripletContext differentiates from other interfaces.
	IsTripletContext()
}

type TripletContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTripletContext() *TripletContext {
	var p = new(TripletContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AbcParserRULE_triplet
	return p
}

func (*TripletContext) IsTripletContext() {}

func NewTripletContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TripletContext {
	var p = new(TripletContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AbcParserRULE_triplet

	return p
}

func (s *TripletContext) GetParser() antlr.Parser { return s.parser }

func (s *TripletContext) PS() antlr.TerminalNode {
	return s.GetToken(AbcParserPS, 0)
}

func (s *TripletContext) AllNUMBER() []antlr.TerminalNode {
	return s.GetTokens(AbcParserNUMBER)
}

func (s *TripletContext) NUMBER(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserNUMBER, i)
}

func (s *TripletContext) AllCOLON() []antlr.TerminalNode {
	return s.GetTokens(AbcParserCOLON)
}

func (s *TripletContext) COLON(i int) antlr.TerminalNode {
	return s.GetToken(AbcParserCOLON, i)
}

func (s *TripletContext) GetRuleContext() antlr.RuleContext {
	return s
}
